--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>DOM Manipulation</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
-  
+<h2>0</h2>
+<button class="inc">Increase</button>
+<button class="dec">Decrease</button>
+
+
+<div id="bulb"></div>
+<button class="onoff">on</button>
+
 
 <script src="script.js"></script>
 </body>
