ipl winner task

--- a/index.html
+++ b/index.html
@@ -9,17 +9,16 @@
 </head>
 
 <body>
-
-<h2>0</h2>
-<button class="inc">Increase</button>
-<button class="dec">Decrease</button>
-
-
-<div id="bulb"></div>
-<button class="onoff">on</button>
-
-
-<script src="script.js"></script>
+    <main>
+        
+        <div id="box">
+            Check Your Winner
+            <h1>***</h1>
+            <h2>***</h2>
+        </div>
+        <button>Click</button>
+    </main>
+    <script src="script.js"></script>
 </body>
 
 </html>
