--- a/index.html
+++ b/index.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JS DOM</title>
     <link rel="stylesheet" href="style.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
 </head>
+
 <body>
-    
-    <div class="main">
-        <div class="card">
-            <img src="https://images.pexels.com/photos/1545743/pexels-photo-1545743.jpeg" alt="">
-            <i id = "love" class="ri-heart-fill"></i>
-        </div>
-    </div>
+
+    <main>
+
+    </main>
 
     <script src="script.js"></script>
 </body>
+
 </html>
