--- a/index.html
+++ b/index.html
@@ -1,38 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Piano</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Lecture 49</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-  <div class="piano-case">
-    <div class="piano-board">
+  <div class="main">
+    <div class="elem">
+      <div class="left">
+        <img src="./img/virat.jpg" alt="">
+        <div class="info">
+          <h3>Virat Kohli</h3>
+        </div>
+      </div>
+      <div class="right">
+        <button>Follow</button>
+      </div>
+    </div>
 
-      <div class="white key" data-key="KeyZ" data-sound="0"><span>Z</span></div>
-      <div class="black key" data-key="KeyS" data-sound="7"><span>S</span></div>
+    <div class="elem">
+      <div class="left">
+        <img src="./img/salt.jpg" alt="">
+        <div class="info">
+          <h3>Phil Salt</h3>
+        </div>
+      </div>
+      <div class="right">
+        <button>Follow</button>
+      </div>
+    </div>
 
-      <div class="white key" data-key="KeyX" data-sound="1"><span>X</span></div>
-      <div class="black key" data-key="KeyD" data-sound="8"><span>D</span></div>
-
-      <div class="white key" data-key="KeyC" data-sound="2"><span>C</span></div>
-
-      <div class="white key" data-key="KeyV" data-sound="3"><span>V</span></div>
-      <div class="black key" data-key="KeyG" data-sound="9"><span>G</span></div>
-
-      <div class="white key" data-key="KeyB" data-sound="4"><span>B</span></div>
-      <div class="black key" data-key="KeyH" data-sound="10"><span>H</span></div>
-
-      <div class="white key" data-key="KeyN" data-sound="5"><span>N</span></div>
-      <div class="black key" data-key="KeyJ" data-sound="11"><span>J</span></div>
-
-      <div class="white key" data-key="KeyM" data-sound="6"><span>M</span></div>
-
+    <div class="elem">
+      <div class="left">
+        <img src="./img/rajat.jpg" alt="">
+        <div class="info">
+          <h3>Rajat Patidar</h3>
+        </div>
+      </div>
+      <div class="right">
+        <button>Follow</button>
+      </div>
+    </div>
+    <div class="elem">
+      <div class="left">
+        <img src="./img/devdat.avif" alt="">
+        <div class="info">
+          <h3>Devdutt Padikkal</h3>
+        </div>
+      </div>
+      <div class="right">
+        <button>Follow</button>
+      </div>
     </div>
   </div>
 
+
   <script src="script.js"></script>
 </body>
+
 </html>
