L50 insta reel UI

--- a/index.html
+++ b/index.html
@@ -1,66 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lecture 49</title>
+  <title>Lecture 50</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css" rel="stylesheet">
 </head>
 
 <body>
-
   <div class="main">
-    <div class="elem">
-      <div class="left">
-        <img src="./img/virat.jpg" alt="">
-        <div class="info">
-          <h3>Virat Kohli</h3>
+    <div class="all-Reels">
+      <div class="reel">
+        <video autoplay muted loop src=""></video>
+        <div class="right">
+          <div class="icon"><i class="ri-heart-3-line"></i><span>1.2k</span></div>
+          <div class="icon"><i class="ri-chat-3-line"></i><span>101</span></div>
+          <div class="icon"><i class="ri-share-forward-line"></i></div>
+          <div class="icon"><i class="ri-download-line"></i></div>
         </div>
-      </div>
-      <div class="right">
-        <button>Follow</button>
-      </div>
-    </div>
 
-    <div class="elem">
-      <div class="left">
-        <img src="./img/salt.jpg" alt="">
-        <div class="info">
-          <h3>Phil Salt</h3>
-        </div>
-      </div>
-      <div class="right">
-        <button>Follow</button>
-      </div>
-    </div>
+        <div class="btm">
+          <div class="info">
+            <img src="https://images.unsplash.com/photo-1766469284258-11bf4223e2af?w=600&auto=format&fit=crop&q=60" alt="">
+            <h3>mahesh</h3>
+            <button>Follow</button>
+          </div>
 
-    <div class="elem">
-      <div class="left">
-        <img src="./img/rajat.jpg" alt="">
-        <div class="info">
-          <h3>Rajat Patidar</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+
+          <div class="music">
+            🎵 pradeep_lift · Original audio
+          </div>
         </div>
+
       </div>
-      <div class="right">
-        <button>Follow</button>
-      </div>
+      
     </div>
-    <div class="elem">
-      <div class="left">
-        <img src="./img/devdat.avif" alt="">
-        <div class="info">
-          <h3>Devdutt Padikkal</h3>
-        </div>
-      </div>
-      <div class="right">
-        <button>Follow</button>
-      </div>
-    </div>
+    
   </div>
 
-
-  <script src="script.js"></script>
+  <script src="script.js">  </script>
 </body>
-
 </html>
